@@ -21,24 +21,24 @@ GOTO:Start
 
 :Start
 
-IF NOT DEFINED RDECK_HOME (
-   ECHO RDECK_HOME not set
+rem Guess RDECK_BASE if not defined
+set "CURRENT_DIR=%cd%"
+if not "%RDECK_BASE%" == "" goto gotRdeckBase
+set "RDECK_BASE=%CURRENT_DIR%"
+if exist "%RDECK_BASE%\etc\profile.bat" goto gotRdeckBase
+set "RDECK_BASE="
+:gotRdeckBase
+
+IF NOT EXIST "%RDECK_BASE%\etc\profile.bat" (
+   ECHO Unable to source %RDECK_BASE%\etc\profile.bat
    GOTO:EOF
+) ELSE (
+	CALL "%RDECK_BASE%\etc\profile.bat"
 )
 
 IF NOT DEFINED RDECK_BASE (
    ECHO RDECK_BASE not set
    GOTO:EOF
-)
-
-
-IF "%RDECK_HOME%"=="%RDECK_BASE%" (
-   ECHO RDECK_HOME and RDECK_BASE cannot be the same directory path, RDECK_HOME and RDECK_BASE are set to %RDECK_HOME%
-   GOTO:EOF
-)
-
-IF NOT DEFINED ANT_HOME (
-	SET ANT_HOME=%RDECK_HOME%\pkgs\apache-ant-1.8.1
 )
 
 IF "%JAVA_HOME%" =="" (
@@ -50,26 +50,15 @@ IF NOT EXIST "%JAVA_HOME%\bin\java.exe" (
    GOTO:EOF
 )
 
-set LIBDIR=%RDECK_HOME%\tools\lib
-set _CLASSPATH=%CLASSPATH%
+set Path=%JAVA_HOME%\bin:%Path%
 
-set CLASSPATH=%1
-for %%i in ( %1\*.jar ) do call buildclasspath_append.cmd %%~fsi
-
-if "%_CLASSPATH%" == "" goto END
-set CLASSPATH=%_CLASSPATH%;%CLASSPATH%
-
-:END
-"%RDECK_HOME%\classes;%ANT_HOME%\lib\ant.jar;%ANT_HOME%\lib\ant-launcher.jar;%ANT_HOME%\lib\regexp-1.5.jar;%ANT_HOME%\lib\ant-apache-regexp.jar"
-set Path=%JAVA_HOME%\bin:%ANT_HOME%\bin:%Path%
-
-CALL %JAVA_HOME%\bin\java "-Dant.home=%ANT_HOME%" ^
-                          "-Duser.java_home=%JAVA_HOME%" ^
-                          "-Drdeck.home=%RDECK_HOME%" ^
-                          "-Drdeck.base=%RDECK_BASE%" ^
-                          %RDECK_SSL_OPTS% ^
-                          -cp  ^
-                          com.dtolabs.rundeck.core.cli.ctljobs.JobsTool %*
+CALL "%JAVA_HOME%\bin\java" ^
+    %RDECK_CLI_OPTS% ^
+    "-Duser.java_home=%JAVA_HOME%" ^
+    "-Drdeck.base=%RDECK_BASE%" ^
+    %RDECK_SSL_OPTS% ^
+    -Djava.ext.dirs=%RD_LIBDIR% ^
+    com.dtolabs.rundeck.core.cli.jobs.JobsTool %*
 
 IF NOT "%ERRORLEVEL%"=="0" GOTO:EXITSetup
 
